-- Generated from database.dbml
-- Target: PostgreSQL
CREATE EXTENSION IF NOT EXISTS pgcrypto;

DO $$ BEGIN
    CREATE TYPE role_name AS ENUM ('admin', 'hr', 'manager', 'employee');
EXCEPTION
    WHEN duplicate_object THEN null;
END $$;

DO $$ BEGIN
    CREATE TYPE user_status AS ENUM ('active', 'inactive', 'locked');
EXCEPTION
    WHEN duplicate_object THEN null;
END $$;

DO $$ BEGIN
    CREATE TYPE employee_status AS ENUM ('active', 'inactive', 'resigned');
EXCEPTION
    WHEN duplicate_object THEN null;
END $$;

DO $$ BEGIN
    CREATE TYPE face_profile_status AS ENUM ('pending', 'active', 'revoked', 'failed');
EXCEPTION
    WHEN duplicate_object THEN null;
END $$;

DO $$ BEGIN
    CREATE TYPE attendance_event_type AS ENUM ('check_in', 'check_out', 'unknown');
EXCEPTION
    WHEN duplicate_object THEN null;
END $$;

DO $$ BEGIN
    CREATE TYPE attendance_record_status AS ENUM ('present', 'late', 'early_leave', 'late_and_early_leave', 'absent', 'on_leave', 'holiday', 'missing_check_in', 'missing_check_out', 'manually_edited');
EXCEPTION
    WHEN duplicate_object THEN null;
END $$;

DO $$ BEGIN
    CREATE TYPE attendance_source AS ENUM ('face_recognition', 'manual', 'edited', 'system');
EXCEPTION
    WHEN duplicate_object THEN null;
END $$;

DO $$ BEGIN
    CREATE TYPE leave_request_status AS ENUM ('pending', 'approved', 'rejected', 'cancelled');
EXCEPTION
    WHEN duplicate_object THEN null;
END $$;

DO $$ BEGIN
    CREATE TYPE leave_time_type AS ENUM ('full_day', 'morning', 'afternoon', 'custom');
EXCEPTION
    WHEN duplicate_object THEN null;
END $$;

DO $$ BEGIN
    CREATE TYPE approval_action AS ENUM ('approved', 'rejected', 'forwarded', 'cancelled');
EXCEPTION
    WHEN duplicate_object THEN null;
END $$;

DO $$ BEGIN
    CREATE TYPE correction_request_status AS ENUM ('pending', 'approved', 'rejected', 'cancelled');
EXCEPTION
    WHEN duplicate_object THEN null;
END $$;

DO $$ BEGIN
    CREATE TYPE notification_type AS ENUM ('attendance', 'leave', 'correction', 'system', 'face_registration');
EXCEPTION
    WHEN duplicate_object THEN null;
END $$;

DO $$ BEGIN
    CREATE TYPE audit_action AS ENUM ('create', 'update', 'delete', 'approve', 'reject', 'login', 'logout', 'revoke', 'manual_edit');
EXCEPTION
    WHEN duplicate_object THEN null;
END $$;

CREATE TABLE IF NOT EXISTS roles (
  role_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name role_name NOT NULL UNIQUE,
  description text,
  created_at timestamptz NOT NULL DEFAULT now(),
  updated_at timestamptz NOT NULL DEFAULT now()
);

CREATE TABLE IF NOT EXISTS users (
  user_id uuid DEFAULT gen_random_uuid() PRIMARY KEY,
  email varchar NOT NULL,
  password_hash varchar NOT NULL,
  role_id integer NOT NULL,
  status user_status NOT NULL DEFAULT 'active',
  token_version integer NOT NULL DEFAULT 0,
  last_login_at timestamptz,
  refresh_token_hash text,
  refresh_token_expires_at timestamptz,
  refresh_token_created_at timestamptz,
  created_at timestamptz NOT NULL DEFAULT now(),
  updated_at timestamptz NOT NULL DEFAULT now()
);

CREATE TABLE IF NOT EXISTS departments (
  department_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name varchar NOT NULL,
  code varchar,
  description text,
  is_active boolean NOT NULL DEFAULT true,
  created_at timestamptz NOT NULL DEFAULT now(),
  updated_at timestamptz NOT NULL DEFAULT now()
);

CREATE TABLE IF NOT EXISTS positions (
  position_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name varchar NOT NULL,
  code varchar,
  description text,
  is_active boolean NOT NULL DEFAULT true,
  created_at timestamptz NOT NULL DEFAULT now(),
  updated_at timestamptz NOT NULL DEFAULT now()
);

CREATE TABLE IF NOT EXISTS employees (
  employee_id uuid DEFAULT gen_random_uuid() PRIMARY KEY,
  user_id uuid,
  registered_by uuid,
  employee_code varchar NOT NULL,
  full_name varchar NOT NULL,
  phone varchar,
  avatar_url text,
  department_id integer,
  position_id integer,
  manager_id uuid,
  date_of_birth date,
  gender varchar,
  address text,
  hire_date date,
  resignation_date date,
  status employee_status NOT NULL DEFAULT 'active',
  created_at timestamptz NOT NULL DEFAULT now(),
  updated_at timestamptz NOT NULL DEFAULT now()
);
COMMENT ON COLUMN employees.registered_by IS 'User who created this employee profile';
COMMENT ON COLUMN employees.gender IS 'male | female | other';

CREATE TABLE IF NOT EXISTS department_managers (
  manager_id uuid,
  department_id integer,
  assigned_at timestamptz NOT NULL DEFAULT now(),
  PRIMARY KEY (manager_id, department_id)
);

CREATE TABLE IF NOT EXISTS work_shifts (
  shift_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name varchar NOT NULL,
  code varchar,
  start_time time NOT NULL,
  end_time time NOT NULL,
  is_overnight boolean NOT NULL DEFAULT false,
  late_threshold_minutes integer NOT NULL DEFAULT 0,
  early_leave_threshold_minutes integer NOT NULL DEFAULT 0,
  required_work_minutes integer,
  is_active boolean NOT NULL DEFAULT true,
  created_at timestamptz NOT NULL DEFAULT now(),
  updated_at timestamptz NOT NULL DEFAULT now()
);
COMMENT ON COLUMN work_shifts.required_work_minutes IS 'Required working minutes to count as full attendance';

CREATE TABLE IF NOT EXISTS employee_shift_assignments (
  assignment_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  employee_id uuid NOT NULL,
  shift_id integer NOT NULL,
  effective_date date NOT NULL,
  end_date date,
  created_by uuid,
  created_at timestamptz NOT NULL DEFAULT now(),
  updated_at timestamptz NOT NULL DEFAULT now()
);

CREATE TABLE IF NOT EXISTS holidays (
  holiday_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name varchar NOT NULL,
  holiday_date date NOT NULL,
  description varchar,
  created_at timestamptz NOT NULL DEFAULT now(),
  updated_at timestamptz NOT NULL DEFAULT now()
);

CREATE TABLE IF NOT EXISTS face_profiles (
  profile_id uuid DEFAULT gen_random_uuid() PRIMARY KEY,
  employee_id uuid NOT NULL,
  status face_profile_status NOT NULL DEFAULT 'pending',
  qdrant_collection varchar NOT NULL,
  embedding_model varchar,
  embedding_version varchar,
  registered_by uuid,
  revocation_reason text,
  revoked_at timestamptz,
  created_at timestamptz NOT NULL DEFAULT now(),
  updated_at timestamptz NOT NULL DEFAULT now()
);
COMMENT ON COLUMN face_profiles.qdrant_collection IS 'Ten collection trong Qdrant';
COMMENT ON COLUMN face_profiles.embedding_model IS 'e.g. buffalo_l / arcface';
COMMENT ON COLUMN face_profiles.embedding_version IS 'Used when switching embedding model';

CREATE TABLE IF NOT EXISTS attendance_events (
  event_id uuid DEFAULT gen_random_uuid() PRIMARY KEY,
  employee_id uuid,
  event_type attendance_event_type NOT NULL,
  event_time timestamptz NOT NULL,
  confidence_score double precision,
  anti_spoof_score double precision,
  image_url text,
  raw_result jsonb,
  is_accepted boolean NOT NULL DEFAULT true,
  rejection_reason text,
  created_at timestamptz NOT NULL DEFAULT now()
);
COMMENT ON COLUMN attendance_events.raw_result IS 'Full JSON response from AI service';

CREATE TABLE IF NOT EXISTS attendance_records (
  record_id uuid DEFAULT gen_random_uuid() PRIMARY KEY,
  employee_id uuid NOT NULL,
  shift_id integer,
  work_date date NOT NULL,
  check_in_time timestamptz,
  check_out_time timestamptz,
  status attendance_record_status NOT NULL,
  late_minutes integer NOT NULL DEFAULT 0,
  early_leave_minutes integer NOT NULL DEFAULT 0,
  worked_minutes integer NOT NULL DEFAULT 0,
  source attendance_source NOT NULL DEFAULT 'face_recognition',
  notes text,
  created_at timestamptz NOT NULL DEFAULT now(),
  updated_at timestamptz NOT NULL DEFAULT now()
);
COMMENT ON COLUMN attendance_records.work_date IS 'Business date. Model comment says this should be date; current SQLAlchemy declaration omits an explicit Date type.';

CREATE TABLE IF NOT EXISTS leave_types (
  leave_type_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name varchar NOT NULL,
  code varchar,
  is_paid boolean NOT NULL DEFAULT true,
  max_days_per_year integer,
  description text,
  is_active boolean NOT NULL DEFAULT true,
  created_at timestamptz NOT NULL DEFAULT now(),
  updated_at timestamptz NOT NULL DEFAULT now()
);

CREATE TABLE IF NOT EXISTS leave_requests (
  request_id uuid DEFAULT gen_random_uuid() PRIMARY KEY,
  employee_id uuid NOT NULL,
  leave_type_id integer NOT NULL,
  start_date date NOT NULL,
  end_date date NOT NULL,
  time_type leave_time_type NOT NULL DEFAULT 'full_day',
  total_days double precision,
  reason text,
  status leave_request_status NOT NULL DEFAULT 'pending',
  approved_by uuid,
  approved_at timestamptz,
  rejection_reason text,
  created_at timestamptz NOT NULL DEFAULT now(),
  updated_at timestamptz NOT NULL DEFAULT now()
);

CREATE TABLE IF NOT EXISTS leave_approval_logs (
  log_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  leave_request_id uuid NOT NULL,
  approver_id uuid NOT NULL,
  action approval_action NOT NULL,
  comment text,
  created_at timestamptz NOT NULL DEFAULT now()
);

CREATE TABLE IF NOT EXISTS attendance_correction_requests (
  request_id uuid DEFAULT gen_random_uuid() PRIMARY KEY,
  employee_id uuid NOT NULL,
  attendance_record_id uuid,
  requested_check_in timestamptz,
  requested_check_out timestamptz,
  reason text NOT NULL,
  status correction_request_status NOT NULL DEFAULT 'pending',
  reviewed_by uuid,
  reviewed_at timestamptz,
  rejection_reason text,
  created_at timestamptz NOT NULL DEFAULT now(),
  updated_at timestamptz NOT NULL DEFAULT now()
);

CREATE TABLE IF NOT EXISTS attendance_correction_logs (
  log_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  correction_request_id uuid NOT NULL,
  reviewer_id uuid NOT NULL,
  action approval_action NOT NULL,
  comment text,
  old_check_in timestamptz,
  old_check_out timestamptz,
  new_check_in timestamptz,
  new_check_out timestamptz,
  created_at timestamptz NOT NULL DEFAULT now()
);

CREATE TABLE IF NOT EXISTS notifications (
  notification_id uuid DEFAULT gen_random_uuid() PRIMARY KEY,
  user_id uuid NOT NULL,
  title varchar NOT NULL,
  content text,
  type notification_type NOT NULL,
  object_type varchar,
  object_id varchar,
  is_read boolean NOT NULL DEFAULT false,
  read_at timestamptz,
  created_at timestamptz NOT NULL DEFAULT now()
);
COMMENT ON COLUMN notifications.object_type IS 'leave_request | correction_request | attendance_record | face_profile';

CREATE TABLE IF NOT EXISTS audit_logs (
  log_id uuid DEFAULT gen_random_uuid() PRIMARY KEY,
  performed_by uuid,
  action audit_action NOT NULL,
  object_type varchar NOT NULL,
  object_id varchar,
  old_value jsonb,
  new_value jsonb,
  reason text,
  ip_address varchar,
  user_agent text,
  created_at timestamptz NOT NULL DEFAULT now()
);

CREATE TABLE IF NOT EXISTS system_settings (
  setting_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  key varchar NOT NULL,
  value jsonb NOT NULL,
  description text,
  updated_by uuid,
  created_at timestamptz NOT NULL DEFAULT now(),
  updated_at timestamptz NOT NULL DEFAULT now()
);

ALTER TABLE users ADD CONSTRAINT fk_users_role_id_roles_role_id FOREIGN KEY (role_id) REFERENCES roles (role_id) ON DELETE RESTRICT;
ALTER TABLE employees ADD CONSTRAINT fk_employees_user_id_users_user_id FOREIGN KEY (user_id) REFERENCES users (user_id) ON DELETE SET NULL;
ALTER TABLE employees ADD CONSTRAINT fk_employees_registered_by_users_user_id FOREIGN KEY (registered_by) REFERENCES users (user_id) ON DELETE SET NULL;
ALTER TABLE employees ADD CONSTRAINT fk_employees_department_id_departments_department_id FOREIGN KEY (department_id) REFERENCES departments (department_id) ON DELETE SET NULL;
ALTER TABLE employees ADD CONSTRAINT fk_employees_position_id_positions_position_id FOREIGN KEY (position_id) REFERENCES positions (position_id) ON DELETE SET NULL;
ALTER TABLE employees ADD CONSTRAINT fk_employees_manager_id_employees_employee_id FOREIGN KEY (manager_id) REFERENCES employees (employee_id) ON DELETE SET NULL;
ALTER TABLE department_managers ADD CONSTRAINT fk_department_managers_manager_id_employees_employee_id FOREIGN KEY (manager_id) REFERENCES employees (employee_id) ON DELETE CASCADE;
ALTER TABLE department_managers ADD CONSTRAINT fk_department_managers_department_id_departments_department_id FOREIGN KEY (department_id) REFERENCES departments (department_id) ON DELETE CASCADE;
ALTER TABLE employee_shift_assignments ADD CONSTRAINT fk_employee_shift_assignments_employee_id_employees_employee_id FOREIGN KEY (employee_id) REFERENCES employees (employee_id) ON DELETE CASCADE;
ALTER TABLE employee_shift_assignments ADD CONSTRAINT fk_employee_shift_assignments_shift_id_work_shifts_shift_id FOREIGN KEY (shift_id) REFERENCES work_shifts (shift_id) ON DELETE RESTRICT;
ALTER TABLE employee_shift_assignments ADD CONSTRAINT fk_employee_shift_assignments_created_by_users_user_id FOREIGN KEY (created_by) REFERENCES users (user_id) ON DELETE SET NULL;
ALTER TABLE face_profiles ADD CONSTRAINT fk_face_profiles_employee_id_employees_employee_id FOREIGN KEY (employee_id) REFERENCES employees (employee_id) ON DELETE CASCADE;
ALTER TABLE face_profiles ADD CONSTRAINT fk_face_profiles_registered_by_users_user_id FOREIGN KEY (registered_by) REFERENCES users (user_id) ON DELETE SET NULL;
ALTER TABLE attendance_events ADD CONSTRAINT fk_attendance_events_employee_id_employees_employee_id FOREIGN KEY (employee_id) REFERENCES employees (employee_id) ON DELETE SET NULL;
ALTER TABLE attendance_records ADD CONSTRAINT fk_attendance_records_employee_id_employees_employee_id FOREIGN KEY (employee_id) REFERENCES employees (employee_id) ON DELETE CASCADE;
ALTER TABLE attendance_records ADD CONSTRAINT fk_attendance_records_shift_id_work_shifts_shift_id FOREIGN KEY (shift_id) REFERENCES work_shifts (shift_id) ON DELETE SET NULL;
ALTER TABLE leave_requests ADD CONSTRAINT fk_leave_requests_employee_id_employees_employee_id FOREIGN KEY (employee_id) REFERENCES employees (employee_id) ON DELETE CASCADE;
ALTER TABLE leave_requests ADD CONSTRAINT fk_leave_requests_leave_type_id_leave_types_leave_type_id FOREIGN KEY (leave_type_id) REFERENCES leave_types (leave_type_id) ON DELETE RESTRICT;
ALTER TABLE leave_requests ADD CONSTRAINT fk_leave_requests_approved_by_employees_employee_id FOREIGN KEY (approved_by) REFERENCES employees (employee_id) ON DELETE SET NULL;
ALTER TABLE leave_approval_logs ADD CONSTRAINT fk_leave_approval_logs_leave_request_id_leave_requests_request_id FOREIGN KEY (leave_request_id) REFERENCES leave_requests (request_id) ON DELETE CASCADE;
ALTER TABLE leave_approval_logs ADD CONSTRAINT fk_leave_approval_logs_approver_id_employees_employee_id FOREIGN KEY (approver_id) REFERENCES employees (employee_id) ON DELETE RESTRICT;
ALTER TABLE attendance_correction_requests ADD CONSTRAINT fk_attendance_correction_requests_employee_id_employees_employee_id FOREIGN KEY (employee_id) REFERENCES employees (employee_id) ON DELETE CASCADE;
ALTER TABLE attendance_correction_requests ADD CONSTRAINT fk_attendance_correction_requests_attendance_record_id_attendance_records_record_id FOREIGN KEY (attendance_record_id) REFERENCES attendance_records (record_id) ON DELETE SET NULL;
ALTER TABLE attendance_correction_requests ADD CONSTRAINT fk_attendance_correction_requests_reviewed_by_employees_employee_id FOREIGN KEY (reviewed_by) REFERENCES employees (employee_id) ON DELETE SET NULL;
ALTER TABLE attendance_correction_logs ADD CONSTRAINT fk_attendance_correction_logs_correction_request_id_attendance_correction_requests_request_id FOREIGN KEY (correction_request_id) REFERENCES attendance_correction_requests (request_id) ON DELETE CASCADE;
ALTER TABLE attendance_correction_logs ADD CONSTRAINT fk_attendance_correction_logs_reviewer_id_employees_employee_id FOREIGN KEY (reviewer_id) REFERENCES employees (employee_id) ON DELETE RESTRICT;
ALTER TABLE notifications ADD CONSTRAINT fk_notifications_user_id_users_user_id FOREIGN KEY (user_id) REFERENCES users (user_id) ON DELETE CASCADE;
ALTER TABLE audit_logs ADD CONSTRAINT fk_audit_logs_performed_by_users_user_id FOREIGN KEY (performed_by) REFERENCES users (user_id) ON DELETE SET NULL;
ALTER TABLE system_settings ADD CONSTRAINT fk_system_settings_updated_by_users_user_id FOREIGN KEY (updated_by) REFERENCES users (user_id) ON DELETE SET NULL;

CREATE UNIQUE INDEX IF NOT EXISTS ix_users_email ON users (email);
CREATE INDEX IF NOT EXISTS ix_users_role_id ON users (role_id);
CREATE INDEX IF NOT EXISTS ix_users_status ON users (status);
CREATE INDEX IF NOT EXISTS ix_departments_name ON departments (name);
CREATE UNIQUE INDEX IF NOT EXISTS ix_departments_code ON departments (code);
CREATE INDEX IF NOT EXISTS ix_departments_is_active ON departments (is_active);
CREATE UNIQUE INDEX IF NOT EXISTS ix_positions_name ON positions (name);
CREATE UNIQUE INDEX IF NOT EXISTS ix_positions_code ON positions (code);
CREATE INDEX IF NOT EXISTS ix_positions_is_active ON positions (is_active);
CREATE UNIQUE INDEX IF NOT EXISTS ix_employees_user_id ON employees (user_id);
CREATE INDEX IF NOT EXISTS ix_employees_registered_by ON employees (registered_by);
CREATE UNIQUE INDEX IF NOT EXISTS ix_employees_employee_code ON employees (employee_code);
CREATE INDEX IF NOT EXISTS ix_employees_full_name ON employees (full_name);
CREATE INDEX IF NOT EXISTS ix_employees_department_id ON employees (department_id);
CREATE INDEX IF NOT EXISTS ix_employees_position_id ON employees (position_id);
CREATE INDEX IF NOT EXISTS ix_employees_manager_id ON employees (manager_id);
CREATE INDEX IF NOT EXISTS ix_employees_status ON employees (status);
CREATE INDEX IF NOT EXISTS ix_department_managers_department_id ON department_managers (department_id);
CREATE UNIQUE INDEX IF NOT EXISTS ix_work_shifts_code ON work_shifts (code);
CREATE INDEX IF NOT EXISTS ix_work_shifts_is_active ON work_shifts (is_active);
CREATE INDEX IF NOT EXISTS ix_employee_shift_assignments_employee_id ON employee_shift_assignments (employee_id);
CREATE INDEX IF NOT EXISTS ix_employee_shift_assignments_shift_id ON employee_shift_assignments (shift_id);
CREATE INDEX IF NOT EXISTS ix_employee_shift_assignments_effective_date ON employee_shift_assignments (effective_date);
CREATE INDEX IF NOT EXISTS ix_employee_shift_assignments_end_date ON employee_shift_assignments (end_date);
CREATE UNIQUE INDEX IF NOT EXISTS ix_holidays_holiday_date ON holidays (holiday_date);
CREATE UNIQUE INDEX IF NOT EXISTS ix_face_profiles_employee_id ON face_profiles (employee_id);
CREATE INDEX IF NOT EXISTS ix_face_profiles_status ON face_profiles (status);
CREATE INDEX IF NOT EXISTS ix_face_profiles_qdrant_collection ON face_profiles (qdrant_collection);
CREATE INDEX IF NOT EXISTS ix_attendance_events_employee_id ON attendance_events (employee_id);
CREATE INDEX IF NOT EXISTS ix_attendance_events_event_type ON attendance_events (event_type);
CREATE INDEX IF NOT EXISTS ix_attendance_events_event_time ON attendance_events (event_time);
CREATE INDEX IF NOT EXISTS ix_attendance_records_employee_id ON attendance_records (employee_id);
CREATE INDEX IF NOT EXISTS ix_attendance_records_shift_id ON attendance_records (shift_id);
CREATE INDEX IF NOT EXISTS ix_attendance_records_work_date ON attendance_records (work_date);
CREATE INDEX IF NOT EXISTS ix_attendance_records_status ON attendance_records (status);
CREATE INDEX IF NOT EXISTS ix_attendance_records_source ON attendance_records (source);
CREATE UNIQUE INDEX IF NOT EXISTS ix_leave_types_code ON leave_types (code);
CREATE INDEX IF NOT EXISTS ix_leave_types_is_paid ON leave_types (is_paid);
CREATE INDEX IF NOT EXISTS ix_leave_types_is_active ON leave_types (is_active);
CREATE INDEX IF NOT EXISTS ix_leave_requests_employee_id ON leave_requests (employee_id);
CREATE INDEX IF NOT EXISTS ix_leave_requests_leave_type_id ON leave_requests (leave_type_id);
CREATE INDEX IF NOT EXISTS ix_leave_requests_start_date ON leave_requests (start_date);
CREATE INDEX IF NOT EXISTS ix_leave_requests_end_date ON leave_requests (end_date);
CREATE INDEX IF NOT EXISTS ix_leave_requests_status ON leave_requests (status);
CREATE INDEX IF NOT EXISTS ix_leave_approval_logs_leave_request_id ON leave_approval_logs (leave_request_id);
CREATE INDEX IF NOT EXISTS ix_leave_approval_logs_approver_id ON leave_approval_logs (approver_id);
CREATE INDEX IF NOT EXISTS ix_leave_approval_logs_action ON leave_approval_logs (action);
CREATE INDEX IF NOT EXISTS ix_leave_approval_logs_created_at ON leave_approval_logs (created_at);
CREATE INDEX IF NOT EXISTS ix_attendance_correction_requests_employee_id ON attendance_correction_requests (employee_id);
CREATE INDEX IF NOT EXISTS ix_attendance_correction_requests_attendance_record_id ON attendance_correction_requests (attendance_record_id);
CREATE INDEX IF NOT EXISTS ix_attendance_correction_requests_reviewed_by ON attendance_correction_requests (reviewed_by);
CREATE INDEX IF NOT EXISTS ix_attendance_correction_requests_status ON attendance_correction_requests (status);
CREATE INDEX IF NOT EXISTS ix_attendance_correction_logs_correction_request_id ON attendance_correction_logs (correction_request_id);
CREATE INDEX IF NOT EXISTS ix_attendance_correction_logs_reviewer_id ON attendance_correction_logs (reviewer_id);
CREATE INDEX IF NOT EXISTS ix_attendance_correction_logs_action ON attendance_correction_logs (action);
CREATE INDEX IF NOT EXISTS ix_attendance_correction_logs_created_at ON attendance_correction_logs (created_at);
CREATE INDEX IF NOT EXISTS ix_notifications_user_id ON notifications (user_id);
CREATE INDEX IF NOT EXISTS ix_notifications_type ON notifications (type);
CREATE INDEX IF NOT EXISTS ix_notifications_is_read ON notifications (is_read);
CREATE INDEX IF NOT EXISTS ix_notifications_created_at ON notifications (created_at);
CREATE INDEX IF NOT EXISTS ix_audit_logs_performed_by ON audit_logs (performed_by);
CREATE INDEX IF NOT EXISTS ix_audit_logs_action ON audit_logs (action);
CREATE INDEX IF NOT EXISTS ix_audit_logs_object_type ON audit_logs (object_type);
CREATE INDEX IF NOT EXISTS ix_audit_logs_object_id ON audit_logs (object_id);
CREATE INDEX IF NOT EXISTS ix_audit_logs_created_at ON audit_logs (created_at);
CREATE UNIQUE INDEX IF NOT EXISTS ix_system_settings_key ON system_settings (key);
